# xmregcore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp  main.cpp
cmake/: FindMonero.cmake  MyUtils.cmake
src/: Account.cpp  Account.h  CMakeLists.txt  MicroCore.cpp  MicroCore.h  UniversalIdentifier.cpp  UniversalIdentifier.hpp  tools.cpp  tools.h
tests/: CMakeLists.txt  JsonTx.cpp  JsonTx.h  account_tests.cpp  microcore_tests.cpp  mocks.h  tools_tests.cpp  universalidentifier_tests.cpp
tests/res/tx/: tx_024dc13cb11d411682f04d41b52931849527d530e4cb198a63526c13da31a413.json  tx_140807b970e52b7c633d7ca0ba5be603922aa7a2a1213bdd16d3c1a531402bf6.json  tx_386ac4fbf7d3d2ab6fd4f2d9c2e97d00527ca2867e33cd7aedb1fd05a4b791ec.json  tx_61f756a299efd17442eed5437fa03cbda6b01f341907845f8880bf30319fa01c.json  tx_a7a4e3bdb305b97c43034440b0bc5125c23b24d0730189261151c0aa3f2a05fc.json  tx_ae8f3ad29a40e02dff6a3267c769f08c0af3dc8858683c90ce3ef90212cb7e4b.json  tx_bd461b938c3c8c8e4d9909852221d5c37350ade05e99ef836d6ccb628f6a5a0e.json  tx_c06df274acc273fbce0666b2c8846ac6925a1931fb61e3020b7cc5410d4646b1.json  tx_d7dcb2daa64b5718dad71778112d48ad62f4d5f54337037c420cb76efdd8a21c.json  tx_d89f32f1434b6a668cbbc5c55cb1c0c64e41fccb89f6b1eef210fefdacbdd89f.json  tx_ddff95211b53c194a16c2b8f37ae44b643b8bd46b4cb402af961ecabeb8417b2.json  tx_e658966b256ca30c85848751ff986e3ba7c7cfdadeb46ee1a845a042b3da90db.json  tx_f3c84fe925292ec5b4dc383d306d934214f4819611566051bca904d1cf4efceb.json  tx_f81ecd0381c0b89f23cffe86a799e924af7b5843c663e8c07db98a14e913585e.json
